argocd/applications/mlflow/mlflow-namespace.yaml
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "labels":
    "control-plane": "kubeflow"
    "istio-injection": "enabled"
  "name": "mlflow"
